Add file myScript.js and tp_q_interactif.html

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                                 Travaux pratiques<span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
+                                <li><a href="tp_mefpageweb.html">Questionnaire interactif</a></li>
                                 <li><a href="tp_mefpageweb.html">Mise en forme d'une page web</a></li>
                                 <li><a href="carsgame.html">Jeux de voiture</a></li>
                                 <li><a href="collectespatiale.html">Collecte spatiale</a></li>
@@ -40,12 +41,7 @@
                                 <li><a href="tp_widetext.html">Redimensionnez du texte avec le plugin WideText </a></li>
                             </ul>
                         </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
                         <li><a href="animate.html">Animations</a></li>
                         <li><a href="proverbes.html">Ajax - proverbes</a></li>
                     </ul>
