Add includes headerbase and footerbase via load(). See ressources/header_inc.html and ressources/footer_inc.html and js/includes.js

--- a/proverbes.html
+++ b/proverbes.html
@@ -8,50 +8,9 @@
 
 </head>
 <body>
-<header class="container">
-    <div class="row">
-        <div class="col-sm-12 col-md-12">
-            <h1>Simplifiez vos développements JavaScript avec jQuery !</h1>
-        </div>
-    </div>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
-                    <span class="sr-only"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand">JQUERY</a>
-            </div>
-            <div class="collapse navbar-collapse" id="main-menu">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" >
-                            Travaux pratiques<span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="tp_mefpageweb.html">Mise en forme d'une page web</a></li>
-                            <li><a href="carsgame.html">Jeux de voiture</a></li>
-                            <li><a href="chat.html">Chat avec Ajax</a></li>
-                            <li><a href="tp_widetext.html">Redimensionnez du texte avec le plugin WideText </a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="animate.html">Animations</a></li>
-                    <li><a href="proverbes.html">Ajax - proverbes</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-</header>
+
+<header id="headerbase" class="container"></header>
+
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-12">
@@ -63,15 +22,12 @@
     </div>
 </div>
 
-<footer class="container">
-    <div class="row well">
-        <div class="col-sm-12 col-md-12">
-            <p class="text-center">Site réalisé pour le cours de jQuery de Openclassroom</p>
-        </div>
-    </div>
-</footer>
+<!-- footer_inc.html -->
+<footer id="footerbase" class="container"></footer>
+
 <script src="vendor/jquery/dist/jquery.js"></script>
 <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script><script src="js/proverbes.js"></script>
+<script src="js/includes.js"></script>
 
 </body>
 </html>
