--- a/sendingformmessage.html
+++ b/sendingformmessage.html
@@ -6,10 +6,19 @@
 </head>
 <body>
 
+<header id="headerbase" class="container"></header>
+
 <p>
     Bravo, vous avez envoyer le formulaire construit avec jQuery ;-)
 </p>
 <p><a href="formgenerator.html">Retour au générateur</a></p>
+
+<!-- footer_inc.html -->
+<footer id="footerbase" class="container"></footer>
+
+<script src="vendor/jquery/dist/jquery.js"></script>
+<script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script><script src="js/proverbes.js"></script>
+<script src="js/includes.js"></script>
 
 </body>
 </html>
