--- a/index.html
+++ b/index.html
@@ -7,49 +7,20 @@
         <title>Home</title>
     </head>
     <body>
-    <header class="container">
+    <!-- header_inc.html -->
+    <header id="headerbase" class="container"></header>
+    <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
-                <h1>Simplifiez vos développements JavaScript avec jQuery !</h1>
+                <img id="logojqueryhome" class="img-responsive" src="assets/logojquery.svg" />
             </div>
         </div>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
-                        <span class="sr-only"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand">JQUERY</a>
-                </div>
-                <div class="collapse navbar-collapse" id="main-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <!-- Sous-menu travaux pratiques -->
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" >
-                                Travaux pratiques<span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="tp_mefpageweb.html">Questionnaire interactif</a></li>
-                                <li><a href="tp_mefpageweb.html">Mise en forme d'une page web</a></li>
-                                <li><a href="carsgame.html">Jeux de voiture</a></li>
-                                <li><a href="collectespatiale.html">Collecte spatiale</a></li>
-                                <li><a href="chat.html">Chat avec Ajax</a></li>
-                                <li><a href="tp_widetext.html">Redimensionnez du texte avec le plugin WideText </a></li>
-                            </ul>
-                        </li>
-                        <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
-                        <li><a href="animate.html">Animations</a></li>
-                        <li><a href="proverbes.html">Ajax - proverbes</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    </div>
+    <!-- footer_inc.html -->
+    <footer id="footerbase" class="container"></footer>
+
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/includes.js"></script>
     </body>
 </html>
