--- a/tp_widetext.html
+++ b/tp_widetext.html
@@ -8,50 +8,9 @@
 
     </head>
     <body>
-    <header class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <h1>Simplifiez vos développements JavaScript avec jQuery !</h1>
-            </div>
-        </div>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-menu" aria-expanded="false">
-                        <span class="sr-only"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand">JQUERY</a>
-                </div>
-                <div class="collapse navbar-collapse" id="main-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" >
-                                Travaux pratiques<span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="tp_mefpageweb.html">Mise en forme d'une page web</a></li>
-                                <li><a href="carsgame.html">Jeux de voiture</a></li>
-                                <li><a href="chat.html">Chat avec Ajax</a></li>
-                                <li><a href="tp_widetext.html">Redimensionnez du texte avec le plugin WideText </a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="animate.html">Animations</a></li>
-                        <li><a href="proverbes.html">Ajax - proverbes</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+
+    <header id="headerbase" class="container"></header>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-12 col-md-12">
@@ -60,11 +19,18 @@
             </div>
         </div>
     </div>
+
+    <!-- footer_inc.html -->
+    <footer id="footerbase" class="container"></footer>
+
+
     <script src="vendor/jquery/dist/jquery.js"></script>
     <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- utilisation de la version 2 de jquery pour le plugin wideText -->
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/jQuery.wideText.js"></script>
+    <script src="js/includes.js"></script>
+
     <script>
         $(function(){
             $(window).load( function() {
