--- a/ressources/chatdata.htm
+++ b/ressources/chatdata.htm
@@ -1,1 +1,1 @@
- >>> <br>heuu >>> comprend pas !!!!!<br>ouou >>> papapapapqpapa<br>Lili >>> testtttt<br>dedede > URURURURURURU<br>dedede > TRTRTRTR<br>dedede > zeZRQETHJHJHJHGJHG<br>
+gege >>> Chaut les gars <br> >>> <br>heuu >>> comprend pas !!!!!<br>ouou >>> papapapapqpapa<br>Lili >>> testtttt<br>dedede > URURURURURURU<br>dedede > TRTRTRTR<br>dedede > zeZRQETHJHJHJHGJHG<br>
