--- a/ressources/footer_inc.html
+++ b/ressources/footer_inc.html
@@ -8,7 +8,13 @@
 <!--<footer class="container">-->
     <div class="row well">
         <div class="col-sm-12 col-md-12">
-            <p class="text-center">Site réalisé pour le cours de jQuery de Openclassroom</p>
+            <p class="text-center">Site réalisé pour le cours de jQuery de Openclassroom.</p>
+            <ul class="list-inline text-right">
+                <li><a href="index.html"><span class="glyphicon glyphicon-chevron-down"></span> Mentions légales</a></li>
+                <li><a href="about.html"><span class="glyphicon glyphicon-thumbs-up"></span> Partenaires</a></li>
+                <li><a href="offers.html"><span class="glyphicon glyphicon-copyright-mark"></span> Conditions générales</a></li>
+                <li><a href="blog.html"><span class="glyphicon glyphicon-euro"></span> Paiement en ligne</a></li>
+            </ul>
         </div>
     </div>
 <!--</footer>-->
