--- a/ressources/header_inc.html
+++ b/ressources/header_inc.html
@@ -25,11 +25,11 @@
             </div>
             <div class="collapse navbar-collapse" id="main-menu">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>&nbsp;Home</a></li>
                     <!-- Sous-menu travaux pratiques -->
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" >
-                            Travaux pratiques<span class="caret"></span>
+                            <span class="glyphicon glyphicon-cog"></span>&nbsp;Travaux pratiques<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="tp_q_interactif.html">Questionnaire interactif</a></li>
@@ -43,6 +43,14 @@
                     <li><a href="formgenerator.html">Activité - générateur de formulaire</a></li>
                     <li><a href="animate.html">Animations</a></li>
                     <li><a href="proverbes.html">Ajax - proverbes</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" >
+                            <span class="glyphicon glyphicon-cog"></span>&nbsp;Travaux hors tuto<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="orderform.html">Formulaire de commande de vins</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
