Cleaning of js/myScript.js and orderform.html

--- a/orderform.html
+++ b/orderform.html
@@ -70,11 +70,13 @@
                 </tr>
                 </tbody>
             </table>
-
-            <div class="col-xs-12">
-                <p id="testData"></p>
-                <p style="text-align: right; padding: 15px; margin: 5px;">
-                    Total de la commande : <span id="total" style="color: green; font-size: 20px; font-weight: bolder;"></span>
+            <div class="col-sm-6 col-md-6">
+                <button id="resetOrderForm" class="btn btn-info pull-right">Reset</button>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <!--<p id="testData"></p>-->
+                <p class="pull-left" style="padding: 15px; margin: 5px;">
+                   <b> Total de la commande</b> : <span id="total" style="color: green; font-size: 20px; font-weight: bolder;"></span>
                 </p>
             </div>
 
